# qsimplesheet

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README  qsimplesheet-desktop.sh
src/: Calculator.cpp  Calculator.h  Cell.cpp  Commands.cpp  Commands.h  Graphic.cpp  Graphic.h  ItemDelegate.cpp  ItemDelegate.h  MainWindow.cpp  MainWindow.h  PictureGraphic.cpp  PictureGraphic.h  QSimplesheet.cpp  Table.cpp  Table.h
src/Dialogs/: FindDialog.cpp  FindDialog.h  FunctionListDialog.h  GraphicPropertiesDialog.cpp  GraphicPropertiesDialog.h  InsertRCDialog.cpp  InsertRCDialog.h  MySpinBox.cpp  MySpinBox.h  NewFileDialog.cpp  NewFileDialog.h  SortDialog.cpp  SortDialog.h
